Mise en page de la section Visualisations

--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -138,40 +138,90 @@
     "### Visualisations\n",
     "\n",
     "#### Distributions\n",
-    "<img src=\"images/distribution_time.png\">\n",
-    "La présence de longues périodes sans données recueillies (ou très peu) demandera d'être prise en compte lors de la création des séries temporelles, sans quoi certaines n'auront pas le nombre requis de mesures.\n",
     "\n",
-    "<img src=\"images/distributions_sensors.png\">\n",
-    "Ici, on peut observer la distribution des différentes colonnes des données : certains capteurs ont une large plage de valeurs possibles  distribuées de manière relativement uniforme (humidité, température), d'autres sont disposées sur des modes avec quelques occurences des valeurs non modales (co2, luminosité).\n",
-    "On observe que le confort ne descend que très rarement en dessous de 2 : soit la fonction de confort est mal paramétrée, soit les conditions environnementales des salles ne sont jamais horribles (la seconde hypothèse semble plus probable).\n",
+    "<table style=\"border: '0'\">\n",
+    "        <col width=\"70%\">\n",
+    "        <col>\n",
+    "        <!--<tr style=\"background: None\"><td></td><td></td></td>-->\n",
+    "        <tr> \n",
+    "            <td> <img src=\"images/distribution_time.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>La présence de longues périodes sans données recueillies (ou très peu) demandera d'être prise en compte lors de la création des séries temporelles, sans quoi certaines n'auront pas le nombre requis de mesures.</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td> <img src=\"images/distributions_sensors.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>Ici, on peut observer la distribution des différentes colonnes des données : certains capteurs ont une large plage de valeurs possibles  distribuées de manière relativement uniforme (humidité, température), d'autres sont disposées sur des modes avec quelques occurences des valeurs non modales (co2, luminosité).\n",
+    "On observe que le confort ne descend que très rarement en dessous de 2 : soit la fonction de confort est mal paramétrée, soit les conditions environnementales des salles ne sont jamais horribles (la seconde hypothèse semble plus probable).</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "</table>\n",
     "\n",
     "#### Corrélations\n",
     "\n",
-    "<img src=\"images/correlations_heatmap.png\">\n",
-    "Cette matrice présente la corrélation entre chaque capteur. On y observe le fonctionnement de la fonction de confort : le principal facteur est la température, suivie de la luminosité, puis de l'humidité et du co2. On remarque de relativement fortes corrélations entre luminosité et température (le soleil serait-il le facteur commun ?), et entre co2 et température/luminosité (le fait que les humains sont diurnes serait-il le facteur commun ?). L'humidité ne semble pas corrélée à quoi que ce soit de manière notable : peut-être pourrait on la retirer sans trop de pertes de performances.\n",
-    "On déduit de cette matrice que l'on obtiendra de biens meilleures prédictions avec tous les capteurs qu'avec un seul. (EST-CE RAISONNABLE COMME DEDUCTION ??)\n",
-    "\n",
-    "\n",
-    "<img src=\"images/autocorrelation_lum.png\">\n",
-    "On remarque très bien la présence d'un cycle de 24h dans l'autocorrélation du capteur de luminosité. Cela permet de confirmer que les valeurs des capteurs dépendent du moment de la journée, et sont prédictibles à partir des valeurs antérieures (pas complétement, sinon on aurait une autocorrélation de 1). Cette autocorrélation diminue avec l'augmentation du délai, à cause de l'influence de paramètres externes (il est possible que demain soit plus nuageux qu'hier...).\n",
-    "La luminosité présente l'autocorrélation la plus forte, mais tous les capteurs sont un minimum autocorrélés (sur des multiples de 24h).\n",
+    "<table>\n",
+    "        <col width=\"70%\">\n",
+    "        <col>\n",
+    "        <!--<tr style=\"background: None\"><td></td><td></td></td>-->\n",
+    "        <tr> \n",
+    "            <td> <img src=\"images/correlations_heatmap.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>Cette matrice présente la corrélation entre chaque capteur. On y observe le fonctionnement de la fonction de confort : le principal facteur est la température, suivie de la luminosité, puis de l'humidité et du co2. On remarque de relativement fortes corrélations entre luminosité et température (le soleil serait-il le facteur commun ?), et entre co2 et température/luminosité (le fait que les humains sont diurnes serait-il le facteur commun ?). L'humidité ne semble pas corrélée à quoi que ce soit de manière notable : peut-être pourrait on la retirer sans trop de pertes de performances.\n",
+    "On déduit de cette matrice que l'on obtiendra de biens meilleures prédictions avec tous les capteurs qu'avec un seul. (EST-CE RAISONNABLE COMME DEDUCTION ??)</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td> <img src=\"images/autocorrelation_lum.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>On remarque très bien la présence d'un cycle de 24h dans l'autocorrélation du capteur de luminosité. Cela permet de confirmer que les valeurs des capteurs dépendent du moment de la journée, et sont prédictibles à partir des valeurs antérieures (pas complétement, sinon on aurait une autocorrélation de 1). Cette autocorrélation diminue avec l'augmentation du délai, à cause de l'influence de paramètres externes (il est possible que demain soit plus nuageux qu'hier...).\n",
+    "La luminosité présente l'autocorrélation la plus forte, mais tous les capteurs sont un minimum autocorrélés (sur des multiples de 24h).probable).</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "</table>\n",
     "\n",
     "#### k-means\n",
     "\n",
-    "<img src=\"images/kmeans_co2.png\">\n",
-    "L'algorithme de clustering k-means peut également être appliquée sur des séries temporelles. Les clusters seront les séries \"moyennes/types\" du jeu de données.\n",
-    "Les lignes rouges représentent les clusters et les lignes noires (ou tâches noires en fond) les observations assignées au cluster. L'opacité des observations assignées montrent leur nombre.\n",
+    "<table>\n",
+    "        <col width=\"70%\">\n",
+    "        <col>\n",
+    "        <!--<tr style=\"background: None\"><td></td><td></td></td>-->\n",
+    "        <tr> \n",
+    "            <td> <img src=\"images/kmeans_co2.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>L'algorithme de clustering k-means peut également être appliquée sur des séries temporelles. Les clusters seront les séries \"moyennes/types\" du jeu de données.\n",
+    "Les lignes rouges représentent les clusters et les lignes noires (ou tâches noires en fond) les observations assignées au cluster. L'opacité des observations assignées montrent leur nombre.</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td> <img src=\"images/kmeans_confort.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>On voit bien que les périodes de changement (clusters 1 et 2) sont moins fréquentes que les périodes stables (cluster 3). Il est important de prendre cette répartition en compte afin de ne pas obtenir un modèle prédisant des séries stables (qui pourrait se voir attribuer une bonne performance selon la métrique dûe à leur forte proportion dans les données).</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "</table>\n",
     "\n",
-    "<img src=\"images/kmeans_confort.png\">\n",
-    "On voit bien que les périodes de changement (clusters 1 et 2) sont moins fréquentes que les périodes stables (cluster 3). Il est important de prendre cette répartition en compte afin de ne pas obtenir un modèle prédisant des séries stables (qui pourrait se voir attribuer une bonne performance selon la métrique dûe à leur forte proportion dans les données).\n",
     "\n",
     "#### Décomposition saisonale\n",
-    "<img src=\"images/decomposition_seasonal_temp.png\">\n",
-    "Il est possible de décomposer une série temporelle. Nous avons utilisé une décomposition saisonale naïve (statsmodels.api.tsa.seasonal_decompose()) qui permet d'obtenir les composantes \"trend\" (tendance), \"seasonal\" (saisonale/périodique) et \"residual\" (résidus). En combinant ces deux composantes, on obtient la courbe d'origine, aux résidus près (plus il y a de résidus, moins la décomposition permet de reproduire la série originel : la série est bruitée (ou notre modèle inadaptée..)).\n",
     "\n",
-    "<img src=\"images/decomposition_predictions_temp.png\">\n",
-    "Ce graphique présente le modèle obtenu par décomposition sur une période appliquée à cette même période (en vert), puis aux restes des données (en rouge). On voit très bien que le comportement de la courbe n'est pas le même du tout entre ces deux périodes. Il est nécessaire de prendre en compte ces différences dans la distribution des cibles lors de l'entraînement d'un modèle (sinon on a un modèle qui prédit très bien la semaine 38 de l'année 2017, mais rien d'autre).\n",
-    "Ici, le modèle se trompe complètement, mais pour certains capteurs (luminosité notament), la composante saisonale reste la même quelque soit la période de l'année.\n",
+    "<table>\n",
+    "        <col width=\"70%\">\n",
+    "        <col>\n",
+    "        <tr> \n",
+    "            <td> <img src=\"images/decomposition_seasonal_temp.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>Il est possible de décomposer une série temporelle. Nous avons utilisé une décomposition saisonale naïve (statsmodels.api.tsa.seasonal_decompose()) qui permet d'obtenir les composantes \"trend\" (tendance), \"seasonal\" (saisonale/périodique) et \"residual\" (résidus). En combinant ces deux composantes, on obtient la courbe d'origine, aux résidus près (plus il y a de résidus, moins la décomposition permet de reproduire la série originel : la série est bruitée (ou notre modèle inadaptée..)).</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td> <img src=\"images/decomposition_predictions_temp.png\"> </td>\n",
+    "            <td>\n",
+    "                <p>Ce graphique présente le modèle obtenu par décomposition sur une période appliquée à cette même période (en vert), puis aux restes des données (en rouge). On voit très bien que le comportement de la courbe n'est pas le même du tout entre ces deux périodes. Il est nécessaire de prendre en compte ces différences dans la distribution des cibles lors de l'entraînement d'un modèle (sinon on a un modèle qui prédit très bien la semaine 38 de l'année 2017, mais rien d'autre).\n",
+    "Ici, le modèle se trompe complètement, mais pour certains capteurs (luminosité notament), la composante saisonale reste la même quelque soit la période de l'année.</p>\n",
+    "            </td>\n",
+    "        </tr>\n",
+    "</table>\n",
+    "\n",
     "\n"
    ]
   },
@@ -185,7 +235,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
