--- a/workspace/notebooks/rapport modele.ipynb
+++ b/workspace/notebooks/rapport modele.ipynb
@@ -158,9 +158,12 @@
     "\n",
     "Une couche cachée de 16 neurones à activation \"ReLu\" est utilisée pour faire une première regression linéaire et enfin un neurone de sortie à activation \"sigmoid\". Beaucoup de nos choix (comme la taille du batch) ont été faite de manière empirique puisqu'on manque encore de théorie (et surtout de pratique) au niveau de la conception d'un modèle en situation réelle.\n",
     "\n",
-    "L'entrainement est assez long, environ 3 minutes pour une vingtaine d'epochs ce qui a ralenti la réalisation de tous les tests que nous voulions faire. Pour améliorer les performances de l'entrainement, nous avons certains des \"callbacks\" de Keras tels que \"ReduceLRonPlateau\" et \"ModelCheckpoint\" pour pouvoir enregistrer le meilleur modèle trouvé, ce qui a été très pratique.\n",
+    "L'entrainement est assez long, environ 3 minutes pour une vingtaine d'epochs ce qui a ralenti la réalisation de tous les tests que nous voulions faire. Pour améliorer les performances de l'entrainement, nous avons certains des \"callbacks\" de Keras tels que \"ReduceLRonPlateau\" et \"ModelCheckpoint\" pour pouvoir enregistrer le meilleur modèle actuellement calculé, ce qui a été très pratique.\n",
     "\n",
-    "L'enregistrement d'un modèle se fait sous le format \"Hierarchical Data\" (.h5) utilisée pour les fichiers contenant un important volume de données."
+    "L'enregistrement d'un modèle se fait sous le format \"Hierarchical Data\" (.h5) utilisée pour les fichiers contenant un important volume de données.\n",
+    "\n",
+    "Pour la prédiction de la valeur de confort (fichier test_val_conf.py) :\n",
+    "Le programme charge les modèles entrainés des 4 features, predit leurs valeurs futures et calcule l'indicateur de confort via le script \"annotationUnique.py\" (créé par les M2)"
    ]
   },
   {
