--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -231,7 +231,27 @@
    "source": [
     "## Modèle\n",
     "\n",
-    "Description du modèle, pourquoi (ou le pourquoi sera dans l'intro ?), processus d'entrainement"
+    "l'objet KerasModel a trois fonctions : fit, predict et score\n",
+    "la définition du réseau de neurone à proprement parler est dans la partie \"fit\"\n",
+    "\n",
+    "il se compose d'une couche d'entrées de la taille \"serie_length\".\n",
+    "Etant donnée que les données sont une série temporelle, nous avons fait le choix d'un réseau récurrent (RNN), au niveau de la première couche nous avons essayer \"LSTM\" et \"GRU\" (dans l'exemple la couche se compose de 64 neurones \"LSTM\").\n",
+    "\n",
+    "Une couche cachée de 16 neurones à activation \"ReLu\" est utilisée pour faire une première regression linéaire et enfin un neurone de sortie à activation \"sigmoid\". Beaucoup de nos choix (comme la taille du batch) ont été faite de manière empirique puisqu'on manque encore de théorie (et surtout de pratique) au niveau de la conception d'un modèle en situation réelle.\n",
+    "\n",
+    "L'entrainement est assez long, environ 3 minutes pour une vingtaine d'epochs ce qui a ralenti la réalisation de tous les tests que nous voulions faire. Pour améliorer les performances de l'entrainement, nous avons certains des \"callbacks\" de Keras tels que \"ReduceLRonPlateau\" et \"ModelCheckpoint\" pour pouvoir enregistrer le meilleur modèle actuellement calculé, ce qui a été très pratique.\n",
+    "\n",
+    "L'enregistrement d'un modèle se fait sous le format \"Hierarchical Data\" (.h5) utilisée pour les fichiers contenant un important volume de données.\n",
+    "\n",
+    "Pour la prédiction de la valeur de confort (fichier test_val_conf.py) :\n",
+    "Le programme charge les modèles entrainés des 4 features, predit leurs valeurs futures et calcule l'indicateur de confort via le script \"annotationUnique.py\" (créé par les M2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image du modèle non trouvée](model_plot.png \"model plot\")"
    ]
   },
   {
@@ -316,14 +336,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
