--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -323,7 +323,12 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Nous avons fait X, ça a donné Y mais aussi Z"
+    "Notre architecture est applicable aux 4 types de capteurs, quelque soit la taille de la fenêtre et le délai de prédiction.\n",
+    "Nous pouvons ensuite calculer la valeur de confort sur les prédictions, grâce au module des étudiants de M2.\n",
+    "\n",
+    "La performance de ces modèles n'est pas sensiblement meilleure que par régression linéaire, tout en nécessitant un temps d'entraînement comparablement très long.  \n",
+    "\n",
+    "Pour la prochaine version du modèle, nous souhaiterions explorer les modèles utilisant des convolutions et/ou des GRUs, ainsi que des architectures plus complexes. Nous pensons aussi à prédire des séries temporelles (et non des valeurs), et à prédire en utilisant les valeurs déjà prédites. "
    ]
   }
  ],
@@ -336,14 +341,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
