--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -195,8 +195,7 @@
     "L'enregistrement d'un modèle se fait sous le format \"Hierarchical Data\" (.h5) utilisé pour les fichiers contenant un important volume de données.\n",
     "\n",
     "Pour la prédiction de la valeur de confort (fichier test_val_conf.py) :\n",
-    "Le programme charge les modèles entrainés des 4 features, predit leurs valeurs futures et calcule l'indicateur de confort via le script \"annotationUnique.py\" (créé par les M2)\n",
-    "(on a essayé de reformuler ça sans succès)"
+    "Le programme charge les modèles entrainés des 4 features, predit leurs valeurs futures et calcule l'indicateur de confort via le script \"annotationUnique.py\" (créé par les M2).\n"
    ]
   },
   {
@@ -225,10 +224,10 @@
     "Nous avons utilisé plusieurs métriques :\n",
     "\n",
     " - Mean absolute error et mean squared error : montre l'écart entre les prévisions et la réalité (l'écart entre la MAE au carré et la MSE indique la variance des erreurs). La MSE pénalise les très mauvaises prédictions. Ce sont des mesures de régression, faites sur les valeurs prédites pour le capteur.\n",
-    " - Accuracy f-measure jaccard : les trois donnent exactement le même résultat, sans que nous ne sachions vraiment pourquoi :-( Ce sont des métriques de classification calculées sur le score de confort, recalculé depuis la valeur prédite du capteur.\n",
+    " - Accuracy f-measure jaccard : les trois donnent exactement le même résultat, sans que nous ne sachions vraiment pourquoi. Ce sont des métriques de classification calculées sur le score de confort, recalculé depuis la valeur prédite du capteur.\n",
     " - Distance au sens de la DTW : probablement très adaptée à la tâche, mais trop long à calculer.\n",
     "\n",
-    "{Les performances du modèle basé sur une régression linéaire sont très proches de celle du modèle basé NN/LSTM. Le temps d'entraînement est cependant incomparable (régression : 1sec, LSTM : 2 minutes).}\n",
+    "Les performances du modèle basé sur une régression linéaire sont très proches de celle du modèle basé NN/LSTM. Le temps d'entraînement est cependant incomparable (régression : 1sec, LSTM : 2 minutes).\n",
     "\n",
     "\n",
     "Mesures de MAE, MSE et Accuracy pour les différentes combinaisons de test : les mêmes erreurs sur les mêmes tests !\n",
@@ -265,7 +264,7 @@
     "\n",
     "La performance de ces modèles n'est pas sensiblement meilleure que par régression linéaire, tout en nécessitant un temps d'entraînement comparablement très long.  \n",
     "\n",
-    "Pour la prochaine version du modèle, il serait explorer les modèles utilisant des convolutions et/ou des GRUs, ainsi que des architectures plus complexes. Nous pensons aussi à prédire des séries temporelles (et non des valeurs), et à prédire en réutilisant prédictions antérieures. "
+    "Pour la prochaine version du modèle, nous souhaiterions explorer les modèles utilisant des convolutions et/ou des GRUs, ainsi que des architectures plus complexes. Nous pensons aussi à prédire des séries temporelles (et non des valeurs), et à prédire en réutilisant les prédictions antérieures. "
    ]
   }
  ],
@@ -285,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
