--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -222,16 +222,7 @@
    "metadata": {},
    "source": [
     "Les données sont partagées entre trois ensembles : \"train\", \"dev\" et \"test\"\n",
-    "80% des données pour l'entrainement, 10% pour le dev (utilisé dans model.fit) et 10% pour le test pour pouvoir mesurer l'erreur sur des données inconnues pour le modèle.\n",
-    "\n",
-    "Un exemple :"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Historique d'entrainement](history_plot.png \"history plot\")"
+    "80% des données pour l'entrainement, 10% pour le dev (utilisé dans model.fit) et 10% pour le test pour pouvoir mesurer l'erreur sur des données inconnues pour le modèle."
    ]
   },
   {
@@ -245,7 +236,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Après l'entrainement, l'historique de la loss et la val_loss sera affiché grâce à la librairie matplotlib (le graphique a une echelle logarithmique puisque les valeurs peuvent diminuées très vite)"
+    "Après l'entrainement, l'historique de la loss et la val_loss sera affiché grâce à la librairie matplotlib (le graphique a une echelle logarithmique puisque les valeurs peuvent diminuées très vite)\n",
+    "\n",
+    "Un exemple :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Historique d'entrainement](history_plot.png \"history plot\")"
    ]
   },
   {
