--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Après l'entrainement, l'historique de la loss et la val_loss sera affiché grâce à la librairie matplotlib (le graphique a une echelle logarithmique puisque les valeurs peuvent diminuées très vite)\n",
+    "Après l'entrainement, l'historique de la loss et la val_loss sera affiché grâce à la librairie matplotlib (le graphique a une echelle logarithmique puisque les valeurs peuvent diminuer très rapidement)\n",
     "\n",
     "Un exemple :"
    ]
