--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "## Modèle\n",
     "\n",
-    "Notre architecture de modèle est composée d'une couche d'entrées de la taille du nombre de valeurs dans une série.\n",
+    "Notre architecture de modèle est composée d'une couche d'entrées dont le nombre d'exemple est dépendant de la taille du nombre de valeurs dans une série.\n",
     "Puisque le jeu de données est une série temporelle, nous avons fait le choix d'utiliser un réseau récurrent (RNN). La première couche cachée est une couche LSTM (qui se compose ici de 64 unités).\n",
     "\n",
     "Une seconde couche cachée de 16 neurones à activation \"ReLU\" est utilisée pour faire une première regression linéaire et enfin un neurone de sortie à activation \"sigmoid\". Beaucoup de nos choix (comme la taille du batch) ont été fait de manière empirique puisque nous n'avons ni les bases théoriques ni l'expérience pratique nécessaire à la conception rigoureuse d'une architecture de modèles.\n",
