--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -309,13 +309,12 @@
     "\n",
     "Pour la prochaine version du modèle, nous souhaiterions explorer les modèles utilisant des convolutions et/ou des GRUs, ainsi que des architectures plus complexes. Nous pensons aussi à prédire des séries temporelles (et non des valeurs), et à prédire en réutilisant les prédictions antérieures. "
    ]
-  }
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Librairies et références utilisées \n",
-    "\n"
+    "## Librairies et références utilisées \n"
    ]
   }
  ],
