--- a/workspace/notebooks/Rapport.ipynb
+++ b/workspace/notebooks/Rapport.ipynb
@@ -266,14 +266,14 @@
     "\n",
     "Nous avons utilisé plusieurs métriques :\n",
     "\n",
-    " - Mean absolute error et mean squared error : montre l'écart entre les prévisions et la réalité (l'écart entre la MAE au carré et la MSE indique la variance des erreurs). La MSE pénalise les très mauvaises prédictions. Ce sont des mesures de régression, faites sur les valeurs prédites pour le capteur.\n",
-    " - Accuracy f-measure jaccard : les trois donnent exactement le même résultat, sans que nous ne sachions vraiment pourquoi. Ce sont des métriques de classification calculées sur le score de confort, recalculé depuis la valeur prédite du capteur.\n",
+    " - Mean absolute error et mean squared error : montre l'écart entre les prévisions et la réalité (l'écart entre la MAE au carré et la MSE indique la variance des erreurs). La MSE pénalise les mauvaises prédictions. Ce sont des mesures de régression, faites sur les valeurs prédites pour le capteur.\n",
+    " - Accuracy : c'est une métrique de classification calculée sur le score de confort, ce score est recalculé depuis la valeur prédite du capteur.\n",
     " - Distance au sens de la DTW : probablement très adaptée à la tâche, mais trop long à calculer.\n",
     "\n",
-    "Les performances du modèle basé sur une régression linéaire sont très proches de celle du modèle basé NN/LSTM. Le temps d'entraînement est cependant incomparable (régression : 1sec, LSTM : 2 minutes).\n",
+    "Les performances du modèle basé sur une régression linéaire sont proches de celle du modèle basé NN/LSTM. Le temps d'entraînement du LSTM est cependant très supérieur à celui de la régression linéaire (régression : 1sec, LSTM : 2 minutes).\n",
     "\n",
     "\n",
-    "Mesures de MAE, MSE et Accuracy pour les différentes combinaisons de test : les mêmes erreurs sur les mêmes tests !\n",
+    "Les valeurs de MAE, MSE et Accuracy sont similaires pour les deux modèles, quelque soit le test effectué : \n",
     "\n",
     "\n",
     "| Mean average error | Mean squared error | Accuracy |\n",
@@ -282,17 +282,17 @@
     "\n",
     "\n",
     "\n",
-    "Nous avons réservé quelques points (début Septembre) afin de visualiser les prédictions, sur une période contigüe. La distribution de ces points est différente de celle des données d'entraînement/validation/test. Cela fausse la qualité des prédictions, mais on peut tout de même visualiser l'allure des prédictions :\n",
+    "Nous avons réservé quelques points (une semaine début Septembre) afin de visualiser les prédictions, sur une période contigüe. La distribution de ces points est différente de celle des données d'entraînement/validation/test. Cela diminue la qualité des prédictions, mais permet de visualiser l'allure des prédictions :\n",
     "\n",
     "|Jeu de test|MSE|Précision|Visualisation LSTM64-ReLU16-Sigm1|Visualisation régression linéaire|\n",
     "|---|---|---|---|---|\n",
-    "|ilot1.temp.300.2.1| Faible 0.005 | Élevée 0.93 | ![contiguous.ilot1.temp.300.2.1.LSTM64-ReLU16-Sigm1.png](images/evaluation/contiguous.ilot1.temp.300.2.1.LSTM64-ReLU16-Sigm1.png) | ![contiguous.ilot1.temp.300.2.1.LinearRegression.png](images/evaluation/contiguous.ilot1.temp.300.2.1.LinearRegression.png) |\n",
-    "|ilot1.co2.3600.16.4 | Élevée 0.09 | Élevée 0.92 | ![contiguous.ilot1.co2.3600.16.4.LSTM64-ReLU16-Sigm1.png](images/evaluation/contiguous.ilot1.co2.3600.16.4.LSTM64-ReLU16-Sigm1.png) | ![contiguous.ilot1.co2.3600.16.4.LinearRegression.png](images/evaluation/contiguous.ilot1.co2.3600.16.4.LinearRegression.png) |\n",
-    "|ilot1.temp.3600.32.16| Élevée 0.1 | Faible 0.22 | ![contiguous.ilot1.temp.3600.32.16.LSTM64-ReLU16-Sigm1.png](images/evaluation/contiguous.ilot1.temp.3600.32.16.LSTM64-ReLU16-Sigm1.png) | ![contiguous.ilot1.temp.3600.32.16.LinearRegression.png](images/evaluation/contiguous.ilot1.temp.3600.32.16.LinearRegression.png) |\n",
+    "|ilot1.temp.300.2.1| 0.005 | 0.93 | ![contiguous.ilot1.temp.300.2.1.LSTM64-ReLU16-Sigm1.png](images/evaluation/contiguous.ilot1.temp.300.2.1.LSTM64-ReLU16-Sigm1.png) | ![contiguous.ilot1.temp.300.2.1.LinearRegression.png](images/evaluation/contiguous.ilot1.temp.300.2.1.LinearRegression.png) |\n",
+    "|ilot1.co2.3600.16.4 | 0.09 | 0.92 | ![contiguous.ilot1.co2.3600.16.4.LSTM64-ReLU16-Sigm1.png](images/evaluation/contiguous.ilot1.co2.3600.16.4.LSTM64-ReLU16-Sigm1.png) | ![contiguous.ilot1.co2.3600.16.4.LinearRegression.png](images/evaluation/contiguous.ilot1.co2.3600.16.4.LinearRegression.png) |\n",
+    "|ilot1.temp.3600.32.16| 0.1 | 0.22 | ![contiguous.ilot1.temp.3600.32.16.LSTM64-ReLU16-Sigm1.png](images/evaluation/contiguous.ilot1.temp.3600.32.16.LSTM64-ReLU16-Sigm1.png) | ![contiguous.ilot1.temp.3600.32.16.LinearRegression.png](images/evaluation/contiguous.ilot1.temp.3600.32.16.LinearRegression.png) |\n",
     "\n",
     "Pour résumer :\n",
-    "  - Les deux modèles sont très similaires.\n",
-    "  - MSE et MAE sont des métriques similaires. La précision demande une discrétisation qui pénalise certaines erreurs et pas d'autres (un écart très faible peut faire passer une prédiction dans une autre classe, et donc pénaliser cette prédiction qui était proche de la valeur réelle).\n",
+    "  - Les prédictions des deux modèles sont très similaires.\n",
+    "  - La MSE et la MAE sont des métriques similaires. La précision demande une discrétisation qui pénalise certaines erreurs et pas d'autres (un écart très faible peut faire passer une prédiction dans une autre classe, et donc pénaliser cette prédiction qui était proche de la valeur réelle).\n",
     "  - Plus le modèle prédit loin dans le futur, plus les prédictions sont mauvaises."
    ]
   },
@@ -305,16 +305,27 @@
     "Notre architecture est applicable aux 4 types de capteurs, quelque soit la taille de la fenêtre et le délai de prédiction.\n",
     "Nous pouvons ensuite calculer la valeur de confort sur les prédictions, grâce au module des étudiants de M2.\n",
     "\n",
-    "La performance de ces modèles n'est pas sensiblement meilleure que par régression linéaire, tout en nécessitant un temps d'entraînement comparablement très long.  \n",
+    "La performance de ces modèles n'est pas sensiblement meilleure que par régression linéaire, tout en nécessitant un temps d'entraînement comparablement très long. La prédiction à court terme (une fenêtre temporelle de décalage) est meilleure que celle à long terme (4 fenêtres et plus). Nous jugeons la première satisfaisante.\n",
     "\n",
-    "Pour la prochaine version du modèle, nous souhaiterions explorer les modèles utilisant des convolutions et/ou des GRUs, ainsi que des architectures plus complexes. Nous pensons aussi à prédire des séries temporelles (et non des valeurs), et à prédire en réutilisant les prédictions antérieures. "
+    "Pour la prochaine version du modèle, nous souhaiterions explorer les modèles utilisant des convolutions et/ou des GRUs, ainsi que des architectures plus complexes. Nous pensons aussi à prédire des séries temporelles (et non des valeurs), et à prédire en réutilisant les prédictions antérieures. Nous pourrions aussi n'utiliser qu'un seul modèle pour toutes les caractéristiques, et appliquer des techniques de réduction en dimension."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Librairies et références utilisées \n"
+    "## Bibliothèques et références utilisées \n",
+    "\n",
+    "### Bibliothèques\n",
+    "\n",
+    " - keras, scikit\n",
+    " - pandas (manipulation de données)\n",
+    " - seaborn, matplotlib, statsmodels, tslearn (exploration de données)\n",
+    " \n",
+    "### Références\n",
+    "\n",
+    " - Forecasting: Principles and Pratice (otexts.com/fpp2)\n",
+    " - Long short-term memory: Sepp Hochreiter, Jürgen Schmidhuber (1997)"
    ]
   }
  ],
@@ -327,14 +338,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
